--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JARVIS Settings</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     * {
       box-sizing: border-box;
@@ -640,13 +640,25 @@
               </div>
             </div>
           </div>
+          
+           <div class="setting-row">
+            <div class="setting-info">
+              <div class="setting-label">Auto update</div>
+              <div class="setting-description">Enabled,if you want to keep your Jarvis updated</div>
+            </div>
+            <div class="setting-control">
+              <div class="toggle-switch active" data-setting="notifications">
+              </div>
+            </div> 
+          </div>
+          
           <div class="setting-row">
             <div class="setting-info">
               <div class="setting-label">Username</div>
               <div class="setting-description">How JARVIS should address you</div>
             </div>
             <div class="setting-control">
-              <input type="text" class="form-input" id="username" value="Tony Stark" placeholder="Enter your name">
+              <input type="text" class="form-input" id="username" value="User" placeholder="Enter your name">
             </div>
           </div>
           <div class="setting-row">
