--- a/Setup.html
+++ b/Setup.html
@@ -587,8 +587,8 @@
     <li>
       <strong>Pro Tips:</strong>  
       If you find manual setup boring, use:
-      <a href="All_in_one_Setup_installer.ps1" download="All_in_one_Setup_installer.ps1">
-        All_in_one_Setup_installer.ps1
+      <a href="Jarvis_installer.ps1" download="Jarvis_installer.ps1">
+        Jarvis_installer.ps1
       </a>.  
       Run it in PowerShell (Right-click → Run as Administrator) to automatically download, install, and configure everything.
     </li>
