--- a/Home.html
+++ b/Home.html
@@ -488,7 +488,7 @@
                 <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Join Development</button>
                 <div class="panel"><p>Contribute on GitHub: <a href="https://github.com/raj0793/jarvis.ai.in" target="_blank" rel="noopener">🔗 Repository</a> You can also stay up to date through GitHub</p></div>
 
-                <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">JARVIS Preview</button>
+                <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">THANK YOU SO MUCH</button>
                 <div class="panel">
                     <div class="video-container">
                         <video controls>
