--- a/setup.html
+++ b/setup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- ============================= -->
-<!-- Enhanced JARVIS Setup.html -->
+<!-- JARVIS Setup.html -->
 <!-- ============================= -->
 <html lang="en">
 <head>
@@ -542,7 +542,12 @@
     <li>
       <strong>Create Virtual Environment:</strong>  
       Navigate (cd) to your Jarvis location in VS Code terminal and run:  
-      <code>python -m venv venv</code>
+      <span class="code-container">
+        <code>python -m venv venv</code>
+        <button class="copy-btn" onclick="copyToClipboard('python -m venv venv')" title="Copy installation command">
+          <i class="fas fa-copy"></i>
+        </button>
+      </span>
     </li>
 
     <li>
@@ -605,7 +610,8 @@
     <section>
       <h2>
         <i class="fas fa-tools"></i>
-        Troubleshooting
+        Troubleshoot
+        <i class="fas fa-tools"></i>
       </h2>
       
       <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">
