--- a/main.html
+++ b/main.html
@@ -543,7 +543,7 @@
   <nav class="tab-container">
     <a class="tab-btn active" href="Home.html">Home</a>
     <a class="tab-btn" href="JarSetting.html">Settings</a>
-    <a class="tab-btn" href="Feedback.html">Feedback</a>
+    <a class="tab-btn" href="feedback.html">Feedback</a>
     <a class="tab-btn" href="setup.html">Setup</a>
     <a class="tab-btn" href="requirements.html">Requirements</a>
     <a class="tab-btn" href="about.html">About</a>
