--- a/settings.html
+++ b/settings.html
@@ -23,12 +23,13 @@
     * {
       box-sizing: border-box;
     }
-    
-    body {
+
+    html, body {
+      overflow-y: auto;
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      width: 100%;
+      height: auto;
       min-height: 100vh;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       background-attachment: fixed;
