Add new feature cards to Home.html

--- a/Home.html
+++ b/Home.html
@@ -483,6 +483,46 @@
                     <div class="feature-card"><h4>🔒 Privacy</h4><p>Your data stays on your device - complete privacy guaranteed</p></div> 
                     <div class="feature-card"><h4>🎯 Customization</h4><p>Tailor JARVIS to your specific needs and preferences</p></div>
                     <div class="feature-card"><h4>🌟 Innovation</h4><p>Regular updates with cutting-edge AI features and improvements</p></div>
+                    <div class="feature-card"><h4>🗂️ File Manager</h4><p>Control, search and organize files using simple voice or text commands</p></div>
+
+<div class="feature-card"><h4>🧭 System Navigation</h4><p>Open apps, folders and settings instantly without touching the mouse</p></div>
+
+<div class="feature-card"><h4>📊 System Monitor</h4><p>Real-time CPU, RAM and disk usage monitoring with alerts</p></div>
+
+<div class="feature-card"><h4>🔔 Smart Notifications</h4><p>Jarvis alerts you about important system and task updates</p></div>
+
+<div class="feature-card"><h4>📝 Notes Keeper</h4><p>Create, save and recall notes using voice commands</p></div>
+
+<div class="feature-card"><h4>⏰ Task Scheduler</h4><p>Automate tasks and reminders at specific times</p></div>
+
+<div class="feature-card"><h4>🌙 Night Mode</h4><p>Auto-adjust interface for comfortable night-time usage</p></div>
+
+<div class="feature-card"><h4>🔐 App Locker</h4><p>Protect important applications with password or voice authentication</p></div>
+
+<div class="feature-card"><h4>📡 Internet Checker</h4><p>Detect internet speed and connection stability instantly</p></div>
+
+<div class="feature-card"><h4>🎵 Media Controller</h4><p>Control music and videos playing on your system hands-free</p></div>
+
+<div class="feature-card"><h4>🧮 Calculator</h4><p>Perform quick calculations through voice or command line</p></div>
+
+<div class="feature-card"><h4>🌍 Language Translator</h4><p>Translate text between multiple languages instantly</p></div>
+
+<div class="feature-card"><h4>📅 Calendar Access</h4><p>Check dates, events and plans directly through Jarvis</p></div>
+
+<div class="feature-card"><h4>🗃️ Clipboard Manager</h4><p>Store and reuse multiple copied texts efficiently</p></div>
+
+<div class="feature-card"><h4>🧪 Debug Mode</h4><p>Advanced troubleshooting tools for developers and power users</p></div>
+
+<div class="feature-card"><h4>🖥️ Window Controller</h4><p>Minimize, maximize and switch windows using commands</p></div>
+
+<div class="feature-card"><h4>📁 Project Launcher</h4><p>Quickly open your coding projects and workspaces</p></div>
+
+<div class="feature-card"><h4>🧠 Learning Mode</h4><p>Jarvis adapts to your usage patterns and improves over time</p></div>
+
+<div class="feature-card"><h4>📤 Backup Manager</h4><p>Create and restore backups of important Jarvis data</p></div>
+
+<div class="feature-card"><h4>🔄 Update Manager</h4><p>Check and apply Jarvis updates seamlessly</p></div>
+                    
                     </div>
                 </div>   
                 <hr>
