Add feature cards to Home.html for JARVIS

--- a/Home.html
+++ b/Home.html
@@ -464,7 +464,200 @@
             <div id="tab1" class="tab-content active">
                 <h2>Welcome to JARVIS</h2>
                 <p>Your offline-first smart assistant, built for productivity, automation, and daily interaction.</p>
+<div class="feature-grid">
 
+    <div class="feature-card">
+        <h4>🎤 Voice Assistant</h4>
+        <p>Offline voice control using pyttsx3 and SpeechRecognition</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📋 Requirements</h4>
+        <p>Everything you need, all in one place</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🧠 Smart Memory</h4>
+        <p>JSON-based recall system for context retention</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🧰 Arduino Integration</h4>
+        <p>Smart home automation capabilities</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🎮 Games</h4>
+        <p>Built-in mini games inside Jarvis</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🌐 Platforms</h4>
+        <p>Website and app support</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>⚡ Multi-Functional</h4>
+        <p>Supports GUI, CLI, and agent modes</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📱 Mobile App Support</h4>
+        <p>This feature will be available soon</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🤖 AI Agent</h4>
+        <p>New AI-powered functions coming soon</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>💻 Multi-Platform</h4>
+        <p>Accessible on macOS, Android, iOS, Windows 10/11, and Linux</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>⚙️ JarSetting</h4>
+        <p>Dedicated settings manager for Jarvis on Windows 11</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>💬 Chatbot</h4>
+        <p>Jarvis also works as a chatbot on Windows 11</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🖼️ Image Generation</h4>
+        <p>Currently under development</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🔍 Web Search</h4>
+        <p>Search the web using Google, Bing, Yahoo, and more</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🚀 Performance</h4>
+        <p>Optimized for fast responses and minimal resource usage</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🔒 Privacy</h4>
+        <p>Your data stays on your device for complete privacy</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🎯 Customization</h4>
+        <p>Tailor Jarvis to your specific needs and preferences</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🌟 Innovation</h4>
+        <p>Regular updates with advanced AI improvements</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🗂️ File Manager</h4>
+        <p>Search, organize, and manage files with commands</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🧭 System Navigation</h4>
+        <p>Open apps, folders, and settings without using the mouse</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📊 System Monitor</h4>
+        <p>Real-time CPU, RAM, and disk usage monitoring</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🔔 Smart Notifications</h4>
+        <p>Receive important system and task alerts</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📝 Notes Keeper</h4>
+        <p>Create, save, and recall notes using commands</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>⏰ Task Scheduler</h4>
+        <p>Automate reminders and scheduled tasks</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🌙 Night Mode</h4>
+        <p>Comfortable interface for low-light usage</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🔐 App Locker</h4>
+        <p>Protect apps using password or voice authentication</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📡 Internet Checker</h4>
+        <p>Check internet speed and stability instantly</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🎵 Media Controller</h4>
+        <p>Hands-free control of music and videos</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🧮 Calculator</h4>
+        <p>Quick calculations via voice or command line</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🌍 Language Translator</h4>
+        <p>Instant translation between multiple languages</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📅 Calendar Access</h4>
+        <p>Check dates, events, and schedules easily</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🗃️ Clipboard Manager</h4>
+        <p>Store and reuse copied text efficiently</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🧪 Debug Mode</h4>
+        <p>Advanced troubleshooting tools for developers</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🖥️ Window Controller</h4>
+        <p>Switch, minimize, and maximize windows using commands</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📁 Project Launcher</h4>
+        <p>Quick access to coding projects and workspaces</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🧠 Learning Mode</h4>
+        <p>Adapts to your usage patterns over time</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>📤 Backup Manager</h4>
+        <p>Create and restore backups of Jarvis data</p>
+    </div>
+
+    <div class="feature-card">
+        <h4>🔄 Update Manager</h4>
+        <p>Seamless Jarvis updates and maintenance</p>
+    </div>
+
+</div>
+                
 
 
 
