Add feature cards for new functionalities
Added multiple feature cards to showcase new functionalities including Quick Actions, Template Library, and more.

--- a/Home.html
+++ b/Home.html
@@ -476,6 +476,95 @@
         <p>Everything you need, all in one place</p>
     </div>
 
+    <div class="feature-card"><h4>🧭 Quick Actions</h4><p>Perform frequent actions instantly from a compact panel</p></div>
+<div class="feature-card"><h4>📑 Template Library</h4><p>Pre-made templates for common tasks and documents</p></div>
+<div class="feature-card"><h4>🧿 Focus Shield</h4><p>Block distractions during deep work sessions</p></div>
+<div class="feature-card"><h4>🗃️ Session Saver</h4><p>Restore your last working state anytime</p></div>
+<div class="feature-card"><h4>🧮 Unit Converter</h4><p>Convert units like length, weight, and temperature quickly</p></div>
+<div class="feature-card"><h4>📌 Sticky Notes</h4><p>Pin floating notes anywhere on the screen</p></div>
+<div class="feature-card"><h4>🕵️ Privacy Scanner</h4><p>Detect apps accessing sensitive permissions</p></div>
+<div class="feature-card"><h4>🧵 Macro Recorder</h4><p>Record and replay repetitive workflows</p></div>
+<div class="feature-card"><h4>📊 Chart Builder</h4><p>Create simple charts from your data instantly</p></div>
+<div class="feature-card"><h4>🧾 Text Formatter</h4><p>Clean and format messy text automatically</p></div>
+
+<div class="feature-card"><h4>🔐 Secure Vault</h4><p>Store confidential text securely with encryption</p></div>
+<div class="feature-card"><h4>🗂️ Smart Sorter</h4><p>Auto-sort files into categorized folders</p></div>
+<div class="feature-card"><h4>📮 Quick Share</h4><p>Share content across apps with one command</p></div>
+<div class="feature-card"><h4>🪄 Auto Renamer</h4><p>Rename multiple files using patterns</p></div>
+<div class="feature-card"><h4>📶 Signal Monitor</h4><p>Track WiFi signal strength in real time</p></div>
+<div class="feature-card"><h4>🧠 Command Suggestions</h4><p>Get hints based on your recent activity</p></div>
+<div class="feature-card"><h4>📚 Snippet Library</h4><p>Save reusable text/code snippets</p></div>
+<div class="feature-card"><h4>🧭 Breadcrumbs</h4><p>Track your navigation path across folders</p></div>
+<div class="feature-card"><h4>📅 Habit Tracker</h4><p>Build and monitor daily habits visually</p></div>
+<div class="feature-card"><h4>🧪 Sandbox Runner</h4><p>Test scripts safely in isolation</p></div>
+
+<div class="feature-card"><h4>🧰 Toolbelt</h4><p>Access mini utilities from a single hub</p></div>
+<div class="feature-card"><h4>🗣️ Dictation Pad</h4><p>Convert speech to editable text notes</p></div>
+<div class="feature-card"><h4>🧾 Receipt Saver</h4><p>Store and organize purchase receipts</p></div>
+<div class="feature-card"><h4>🗓️ Timeline Planner</h4><p>Plan projects across a visual timeline</p></div>
+<div class="feature-card"><h4>📎 Attachment Finder</h4><p>Locate files you recently attached anywhere</p></div>
+<div class="feature-card"><h4>🧮 Random Generator</h4><p>Generate random numbers, names, or values</p></div>
+<div class="feature-card"><h4>📍 Geo Reminder</h4><p>Trigger reminders based on locations</p></div>
+<div class="feature-card"><h4>📤 Export Center</h4><p>Export data into multiple file formats</p></div>
+<div class="feature-card"><h4>🧲 Dock Panel</h4><p>Keep favorite tools always accessible</p></div>
+<div class="feature-card"><h4>📡 Port Checker</h4><p>Check open ports and network status</p></div>
+
+<div class="feature-card"><h4>📚 Reading Mode</h4><p>Distraction-free mode for reading content</p></div>
+<div class="feature-card"><h4>🧾 Meeting Logger</h4><p>Log meeting points quickly during calls</p></div>
+<div class="feature-card"><h4>🗂️ Version Tracker</h4><p>Track changes across file versions</p></div>
+<div class="feature-card"><h4>🧭 Path Shortcuts</h4><p>Create quick shortcuts to deep folders</p></div>
+<div class="feature-card"><h4>🧪 Health Check</h4><p>Scan system for common performance issues</p></div>
+<div class="feature-card"><h4>📖 Glossary</h4><p>Maintain your personal terminology list</p></div>
+<div class="feature-card"><h4>🧩 Layout Switcher</h4><p>Change interface layout styles instantly</p></div>
+<div class="feature-card"><h4>🧠 Brain Dump</h4><p>Quickly capture random thoughts and ideas</p></div>
+<div class="feature-card"><h4>📨 Queue Sender</h4><p>Schedule messages to send later</p></div>
+<div class="feature-card"><h4>🗃️ Cache Cleaner</h4><p>Clear temporary files safely</p></div>
+
+<div class="feature-card"><h4>🧭 Context Menu+</h4><p>Enhanced right-click options everywhere</p></div>
+<div class="feature-card"><h4>🧮 Percentage Tool</h4><p>Quick percentage and ratio calculations</p></div>
+<div class="feature-card"><h4>📑 Merge Tool</h4><p>Combine multiple documents into one</p></div>
+<div class="feature-card"><h4>🧵 Task Threads</h4><p>Organize tasks into parallel threads</p></div>
+<div class="feature-card"><h4>📊 Counter</h4><p>Count words, lines, or characters instantly</p></div>
+<div class="feature-card"><h4>🗂️ Auto Archive</h4><p>Archive old files automatically by date</p></div>
+<div class="feature-card"><h4>📍 Pointer Highlighter</h4><p>Highlight cursor for presentations</p></div>
+<div class="feature-card"><h4>📎 Quick Attach</h4><p>Attach recent files without browsing</p></div>
+<div class="feature-card"><h4>🧭 Travel Log</h4><p>Maintain travel notes and records</p></div>
+<div class="feature-card"><h4>📦 Package Builder</h4><p>Bundle files into shareable packages</p></div>
+
+<div class="feature-card"><h4>🧠 Memory Map</h4><p>Visual map of saved notes and data</p></div>
+<div class="feature-card"><h4>🧪 Latency Tester</h4><p>Measure response delays in the system</p></div>
+<div class="feature-card"><h4>📚 Quote Saver</h4><p>Collect and revisit meaningful quotes</p></div>
+<div class="feature-card"><h4>🗂️ Label Printer</h4><p>Design and print custom labels</p></div>
+<div class="feature-card"><h4>📡 Device Pinger</h4><p>Ping devices to check availability</p></div>
+<div class="feature-card"><h4>🧭 Shortcut Trainer</h4><p>Learn useful keyboard shortcuts interactively</p></div>
+<div class="feature-card"><h4>📑 Divider Tool</h4><p>Split documents into sections easily</p></div>
+<div class="feature-card"><h4>🧾 Form Filler</h4><p>Auto-fill repetitive form data</p></div>
+<div class="feature-card"><h4>🗃️ Draft Box</h4><p>Save unfinished content for later</p></div>
+<div class="feature-card"><h4>📈 Trend Watcher</h4><p>Observe patterns in your activities</p></div>
+
+<div class="feature-card"><h4>🧲 Magnet Board</h4><p>Snap important widgets to screen edges</p></div>
+<div class="feature-card"><h4>📚 Index Maker</h4><p>Create indexes for large documents</p></div>
+<div class="feature-card"><h4>🧪 Resource Gauge</h4><p>Visual gauge for system resource load</p></div>
+<div class="feature-card"><h4>📎 Link Organizer</h4><p>Save and categorize useful links</p></div>
+<div class="feature-card"><h4>🗂️ Priority Sort</h4><p>Sort tasks by urgency automatically</p></div>
+<div class="feature-card"><h4>📨 Response Bank</h4><p>Store ready-to-use replies</p></div>
+<div class="feature-card"><h4>🧭 Route Memory</h4><p>Remember frequently visited paths</p></div>
+<div class="feature-card"><h4>📊 Pulse Meter</h4><p>Track activity intensity over time</p></div>
+<div class="feature-card"><h4>🧾 Header Builder</h4><p>Create document headers quickly</p></div>
+<div class="feature-card"><h4>📦 Preset Loader</h4><p>Load preferred settings profiles instantly</p></div>
+
+<div class="feature-card"><h4>🧠 Recall Trigger</h4><p>Trigger stored memories with keywords</p></div>
+<div class="feature-card"><h4>📚 Bookmark Shelf</h4><p>Organize bookmarks in visual shelves</p></div>
+<div class="feature-card"><h4>🧪 Stability Check</h4><p>Test system stability under load</p></div>
+<div class="feature-card"><h4>📑 Outline Maker</h4><p>Create structured outlines for writing</p></div>
+<div class="feature-card"><h4>🧭 Path Cleaner</h4><p>Remove broken shortcuts safely</p></div>
+<div class="feature-card"><h4>📨 Draft Reminder</h4><p>Remind you about unsent drafts</p></div>
+<div class="feature-card"><h4>🗃️ Folder Mirror</h4><p>Mirror folder structure across locations</p></div>
+<div class="feature-card"><h4>📈 Growth Log</h4><p>Track progress across your projects</p></div>
+<div class="feature-card"><h4>🧲 Snap Layouts</h4><p>Arrange windows into preset layouts</p></div>
+<div class="feature-card"><h4>📚 Reference Desk</h4><p>Keep important references within reach</p></div>
+    
+    
     <div class="feature-card">
         <h4>🧠 Smart Memory</h4>
         <p>JSON-based recall system for context retention</p>
