Add Documentation link to navigation

--- a/main.html
+++ b/main.html
@@ -547,6 +547,7 @@
     <a class="tab-btn" href="setup.html">Setup</a>
     <a class="tab-btn" href="requirements.html">Requirements</a>
     <a class="tab-btn" href="about.html">About</a>
+    <a class="tab-btn" href="docs.html">Documentation</a>
   </nav>
 
   <div class="status-indicator" id="statusIndicator">
