--- a/docs.html
+++ b/docs.html
@@ -72,12 +72,11 @@
 
         .menu-icon {
             width: 24px;
-            height: 24px;
+            height: 18px;
             position: relative;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            gap: 4px;
+            justify-content: space-between;
         }
 
         .menu-icon span {
@@ -86,11 +85,11 @@
             height: 2px;
             background: var(--text-primary);
             border-radius: 2px;
-            transition: all 0.3s;
+            transition: all 0.3s ease;
         }
 
         .menu-toggle.active .menu-icon span:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
+            transform: translateY(8px) rotate(45deg);
         }
 
         .menu-toggle.active .menu-icon span:nth-child(2) {
@@ -98,7 +97,7 @@
         }
 
         .menu-toggle.active .menu-icon span:nth-child(3) {
-            transform: rotate(-45deg) translate(5px, -5px);
+            transform: translateY(-8px) rotate(-45deg);
         }
 
         .logo {
@@ -148,7 +147,7 @@
         }
 
         .nav-section {
-            margin-bottom: 24px;
+            margin-bottom: 8px;
         }
 
         .nav-section-title {
@@ -157,12 +156,40 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             color: var(--text-secondary);
-            padding: 0 24px;
-            margin-bottom: 8px;
+            padding: 8px 24px;
+            margin-bottom: 4px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            transition: all 0.2s;
+            user-select: none;
+        }
+
+        .nav-section-title:hover {
+            color: var(--primary-blue);
+            background: var(--bg-secondary);
+        }
+
+        .section-arrow {
+            font-size: 10px;
+            transition: transform 0.3s;
+            display: inline-block;
+        }
+
+        .nav-section.expanded .section-arrow {
+            transform: rotate(90deg);
         }
 
         .nav-list {
             list-style: none;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease;
+        }
+
+        .nav-section.expanded .nav-list {
+            max-height: 500px;
         }
 
         .nav-item {
@@ -170,8 +197,7 @@
         }
 
         .nav-link {
-            display: flex;
-            align-items: center;
+            display: block;
             padding: 10px 24px;
             color: var(--text-primary);
             text-decoration: none;
@@ -179,6 +205,7 @@
             font-weight: 500;
             transition: all 0.2s;
             border-left: 3px solid transparent;
+            cursor: pointer;
         }
 
         .nav-link:hover {
@@ -192,35 +219,6 @@
             border-left-color: var(--primary-blue);
         }
 
-        .sub-nav-list {
-            list-style: none;
-            display: none;
-            background: var(--bg-secondary);
-        }
-
-        .sub-nav-list.open {
-            display: block;
-        }
-
-        .sub-nav-link {
-            display: block;
-            padding: 8px 24px 8px 48px;
-            color: var(--text-secondary);
-            text-decoration: none;
-            font-size: 14px;
-            transition: all 0.2s;
-        }
-
-        .sub-nav-link:hover {
-            color: var(--primary-blue);
-            background: rgba(1, 117, 194, 0.05);
-        }
-
-        .sub-nav-link.active {
-            color: var(--primary-blue);
-            font-weight: 500;
-        }
-
         /* Main Content */
         .main-content {
             margin-left: 0;
@@ -228,10 +226,6 @@
             padding: 48px 24px;
             max-width: 1200px;
             transition: margin-left 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .main-content.sidebar-open {
-            margin-left: var(--sidebar-width);
         }
 
         .content-header {
@@ -254,6 +248,7 @@
 
         .content-section {
             margin-bottom: 48px;
+            scroll-margin-top: 80px;
         }
 
         .section-title {
@@ -456,32 +451,33 @@
     <aside class="sidebar" id="sidebar">
         <nav class="sidebar-content">
             <!-- General Section -->
-            <div class="nav-section">
-                <div class="nav-section-title">General</div>
+            <div class="nav-section expanded">
+                <div class="nav-section-title" data-section="general">
+                    <span>GENERAL</span>
+                    <span class="section-arrow">▶</span>
+                </div>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#jarvis" class="nav-link active">JARVIS</a>
+                        <a href="#jarui" class="nav-link" data-target="jarui">JarUI</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#jaros" class="nav-link">JarOS</a>
+                        <a href="#jarvis" class="nav-link active" data-target="jarvis">JARVIS</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#jarui" class="nav-link">JarUI</a>
+                        <a href="#jaros" class="nav-link" data-target="jaros">JarOS</a>
                     </li>
                 </ul>
             </div>
 
             <!-- Others Section -->
-            <div class="nav-section">
-                <div class="nav-section-title">Others</div>
+            <div class="nav-section expanded">
+                <div class="nav-section-title" data-section="others">
+                    <span>OTHERS</span>
+                    <span class="section-arrow">▶</span>
+                </div>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">About</a>
-                        <ul class="sub-nav-list" id="aboutSubNav">
-                            <li><a href="#about-project" class="sub-nav-link">Project Overview</a></li>
-                            <li><a href="#about-team" class="sub-nav-link">Team</a></li>
-                            <li><a href="#about-vision" class="sub-nav-link">Vision</a></li>
-                        </ul>
+                        <a href="#about" class="nav-link" data-target="about">About</a>
                     </li>
                 </ul>
             </div>
@@ -560,8 +556,7 @@
                 <p>Make sure you have Python 3.8 or higher installed on your system before proceeding with the installation.</p>
             </div>
 
-            <div class="code-block">
-# Clone the repository
+            <div class="code-block"># Clone the repository
 git clone https://github.com/RAJ0793/Jarvis.ai.in.git
 
 # Navigate to the directory
@@ -571,20 +566,17 @@ cd Jarvis.ai.in
 pip install -r requirements.txt
 
 # Run JARVIS
-python main.py
-            </div>
+python main.py</div>
 
             <h3 class="section-subtitle">Configuration</h3>
             <p class="text-block">
                 JARVIS can be configured through the settings panel. Access it by running:
             </p>
-            <div class="code-block">
-python JarSetting.py
-            </div>
+            <div class="code-block">python JarSetting.py</div>
 
             <div style="margin-top: 24px;">
-                <a href="#" class="btn">Download JARVIS</a>
-                <a href="#" class="btn btn-outline" style="margin-left: 12px;">View on GitHub</a>
+                <a href="https://github.com/RAJ0793/Jarvis.ai.in/releases" class="btn">Download JARVIS</a>
+                <a href="https://github.com/RAJ0793/Jarvis.ai.in" class="btn btn-outline" style="margin-left: 12px;">View on GitHub</a>
             </div>
         </section>
 
@@ -636,5 +628,5 @@ python JarSetting.py
             <h3 class="section-subtitle">Design Philosophy</h3>
             <p class="text-block">
                 JarUI follows a clean, minimalist design approach that prioritizes usability and accessibility while maintaining 
-                a modern, professional aesthetic.
+                a modern, professi
   
